3-fontend-portal.k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  labels:
    name: portal
    type: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: portal
      type: service
  template:
    metadata:
      labels:
        name: portal
        type: service
    spec:
      containers:
      - name: portal
        image: ttulka/ecommerce-portal-service
        imagePullPolicy: IfNotPresent
        ports:
        - name: portal
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    name: portal
    type: api
spec:
  selector:
    name: portal
    type: service
  ports:
  - port: 8080
    name: portal-api
