5-ingress.k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  defaultBackend:
    service:
      name: reverseproxy
      port:
        number: 80
  rules:
  - host: ecommerce.local
